--- a/tmux.conf
+++ b/tmux.conf
@@ -5,6 +5,7 @@ set -g prefix C-a
 set -g base-index 1
 set -g history-limit 10000
 set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
 set -g mouse on
 
 # Pane-movement
